fix page layout causing unneccesary scrollbars on small pages

--- a/public/less/_base.less
+++ b/public/less/_base.less
@@ -49,7 +49,7 @@ pre > code {
 }
 .full.height {
     padding: 0;
-    margin: 0 0 -@footer-margin 0;
+    margin: 0 0 calc(-@footer-margin - 2px) 0;
     min-height: 100%;
 }
 .following.bar {
